# duck_sim

./: .env.example  .gitignore  README.md  generate_textures.py  pyproject.toml  scratch_test_oneshot.py  test_cam_global.py  test_cam_search2.py  test_cam_search3.py  test_cam_search4.py  test_handle.py  test_lifted.py  test_mj.py  test_projection.py  test_real_movement.py  test_static.py  walkthrough.md
docs/: actuator_servo_specifications.md  api_documentation.md  best_walk_onnx_2_training_provenance.md  feature_documentation.md  onnx_rl_policy_contract.md  open_duck_mini_v2_kinematics.md  open_duck_mini_v2_locomotion_alignment_audit.md  phase1_environment_validation_pending.md  phase1_final_verification_addendum.md  phase1_runtime_hardening_report.md  phase2_prerequisite_validation_results.md  phase2_robotics_dynamics_plan.md  phase2a_dynamics_scaffold_report.md  phase2b_hybrid_qpos_removal_report.md  phase2b_hybrid_xy_qpos_removal_plan.md  phase2c_hybrid_qvel_scale_report.md  phase2d_moving_window_diagnostics_report.md  phase2d_moving_window_diagnostics_results.json  phase2e_hybrid_z_force_scale_report.md  phase2e_hybrid_z_force_scale_results.json  phase2f_hybrid_rp_qvel_scale_report.md  phase2f_hybrid_rp_qvel_scale_results.json  phase2g_hybrid_torso_orientation_scale_report.md  phase2g_hybrid_torso_orientation_scale_results.json  phase2h_long_window_reduced_hack_diagnostics_report.md  phase2h_long_window_reduced_hack_diagnostics_results.json  phase3_final_upstream_locomotion_alignment_report.md  phase3a_upstream_policy_contract_validation_plan.md  (+8 more)
tests/: test_api.py  (+30 more)
(+101 files in other folders)
